--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,35 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <h1>Priyanshu Rathore</h1>
+    <img style="height: 100px; position: absolute; top: 10px; right: 10px;" src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?semt=ais_hybrid&w=740&q=80" alt=""> 
+    <p>Mail: ramrajya544@gmail.com | Mainpuri 205001 | <a href="">Leetcode</a> | <a href="">Github</a></p>
+    <nav>
+        <ul style=" list-style-type: none; display:flex; padding: 0; margin: 0px; gap: 20px;">
+            <li></li> <a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact me</a></li>
+            <li><a href="">Profiles</a></li>
+        </ul>
+    </nav>
+    <hr>
+    <h2>Education</h2>
+    <pre>B.TECH (CSE)- GLA University Mathura (2023-2027)</pre>
+    <pre>High School- B.B.P.School</pre>
+    <pre>Intermediate- Rajnish Convent School</pre>
+    <hr>
+    <h2>Skills</h2>
+    <h4><b>Languages: </b>Java, Python, SQL, php</h4>
+    <hr>
+    <h2>Projects</h2>
+    <ul>
+        <li>Diabetes Prediction</li>
+        <li> Appointment Booking Website</li>
+        </ul>
+<hr>
+<h2>About me</h2>
+<p>I am a B.Tech student at GLA University, Mathura, pursuing Computer Science Engineering. I have a keen interest in programming and web development.</p>
+<h2>Contact</h2>
+<p>If you would like to get in touch with me, feel free to reach out via email          
 </body>
 </html>
