--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
     <nav>
         <ul style=" list-style-type: none; display:flex; padding: 0; margin: 0px; gap: 20px;">
             <li></li> <a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact me</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Contact">Contact me</a></li>
             <li><a href="">Profiles</a></li>
         </ul>
     </nav>
@@ -32,9 +32,9 @@
         <li> Appointment Booking Website</li>
         </ul>
 <hr>
-<h2>About me</h2>
+<h2 id="About">About</h2>
 <p>I am a B.Tech student at GLA University, Mathura, pursuing Computer Science Engineering. I have a keen interest in programming and web development.</p>
-<h2>Contact</h2>
+<h2 id="Contact">Contact</h2>
 <p>If you would like to get in touch with me, feel free to reach out via email          
 </body>
 </html>
