--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Priyanshu Rathore</h1>
     <img style="height: 100px; position: absolute; top: 10px; right: 10px;" src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?semt=ais_hybrid&w=740&q=80" alt=""> 
-    <p>Mail: ramrajya544@gmail.com | Mainpuri 205001 | <a href="">Leetcode</a> | <a href="">Github</a></p>
+    <p>Mail: ramrajya544@gmail.com | Mainpuri 205001</p>
     <nav>
         <ul style=" list-style-type: none; display:flex; padding: 0; margin: 0px; gap: 20px;">
             <li></li> <a href="">Home</a></li>
@@ -26,6 +26,13 @@
     <h2>Skills</h2>
     <h4><b>Languages: </b>Java, Python, SQL, php</h4>
     <hr>
+    <h2>Profiles</h2>
+    <h3><a href="">Leetcode</a></h3>
+    <h3><a href="">Github</a></h3>
+    <h3><a href="">Linkedin</a></h3>
+    <hr>
+    <h2>Resume</h2>
+    <h4>My Resume:<a href=""> Resume</a></h4>
     <h2>Projects</h2>
     <ul>
         <li>Diabetes Prediction</li>
