--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        header{
+        background-color: rgb(237, 178, 69);
+        }
+        h{
+            color: rgb(76, 168, 249);
+        }
+    </style>
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Priyanshu Rathore</h1>
+    <h1>Priyanshu Rathore 🚩</h1>
     <img style="height: 100px; position: absolute; top: 10px; right: 10px;" src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?semt=ais_hybrid&w=740&q=80" alt=""> 
     <p>Mail: ramrajya544@gmail.com | Mainpuri 205001</p>
+    <header>
     <nav>
         <ul style=" list-style-type: none; display:flex; padding: 0; margin: 0px; gap: 20px;">
             <li></li> <a href="">Home</a></li>
@@ -17,8 +26,9 @@
             <li><a href="">Profiles</a></li>
         </ul>
     </nav>
+    </header>
     <hr>
-    <h2>Education</h2>
+    <h><h2>Education</h2></h>
     <pre>B.TECH (CSE)- GLA University Mathura (2023-2027)</pre>
     <pre>High School- B.B.P.School</pre>
     <pre>Intermediate- Rajnish Convent School</pre>
